# TOTO-REPO

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.bak.20251229_150252
data/: tmp_E_mpb3.csv
data/processed/: births_by_monthday.csv  births_by_year.csv  crowd_scores.csv  results.csv
data/raw/: results.csv
data/tmp_alpha/: D_a0.5.csv
data/tmp_alpha_eval/: full2025_a1.0.csv  full2025_a2.0.csv  h2_2025_a0.5.csv  h2_2025_a1.0.csv  h2_2025_a2.0.csv
reports/low_crowd_budget20_2022-01-01_to_2025-12-31/: per_draw.csv  summary.json
scripts/: analyze_backtest_windows.py  backtest_anticrowd.py  backtest_matched_nulls.py  backtest_multifeature.py  backtest_multifeature.py.bak2  backtest_multifeature.py.bak_diversity  backtest_multifeature.py.bak_fixsyntax  backtest_multifeature.py.bak_indentfix  backtest_multifeature.py.bak_posdigitfix  backtest_top3_pos0_model.py  backtest_walkforward.py  compare_pick_sets.py  eda_birthdayish.py  eda_deep.py  eda_human_fingerprints.py  eda_pairs.py  eda_ultra.py  eda_ultra_fingerprints.py  eda_within_day.py  final_2025_eval.sh  final_boss.py  grid_top3_pos0.py  inspect_top3_pos0_bias.py  make_numbers_long.py  picks_anticrowd.py  regime_gate_backtest.py  regime_gate_backtest_matched_null.py  sanity_checks.py  score_asof.py  stat_tests.py  sweep_backtests.py  sweep_parallel.py
src/dmc4d/: __init__.py  __main__.py  config.py  (+2 more)
src/dmc4d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_imports.py  test_scoring.py  test_smoke.py
tools/: upgrade_repo.sh
(+25 files in other folders)
