[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmc4d"
version = "0.1.0"
description = "Malaysia 4D (Da Ma Cai 1+3D) research + backtesting + crowd model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "mypy>=1.8"
]

[project.scripts]
dmc4d = "dmc4d.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "dmc4d",
  "dmc4d.utils",
  "dmc4d.data_sources",
  "dmc4d.datasets",
  "dmc4d.pricing",
  "dmc4d.scoring",
  "dmc4d.crowd",
  "dmc4d.crowd.weights",
  "dmc4d.strategies",
  "dmc4d.backtest",
  "dmc4d.cli"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
